--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,6 @@ scikit-learn>=1.3.0
 # Optional: Jupyter support
 jupyter>=1.0.0
 ipykernel>=6.25.0
+
+# Markdown to HTML export (for business docs)
+markdown>=3.6
