--- a/config_template.yaml
+++ b/config_template.yaml
@@ -157,10 +157,10 @@ model:
   priors: "default"
   
   # MCMC Sampling Settings
-  n_samples: 2000       # Number of posterior samples per chain
-  n_tune: 1000          # Number of tuning/burn-in steps
+  n_samples: 4000       # Number of posterior samples per chain
+  n_tune: 3000          # Number of tuning/burn-in steps
   n_chains: 4           # Number of parallel chains
-  target_accept: 0.95   # Target acceptance rate (higher = more accurate, slower)
+  target_accept: 0.99   # Target acceptance rate (higher = more accurate, slower)
   
   # Convergence criteria
   max_rhat: 1.01        # Maximum R-hat for convergence
@@ -177,7 +177,7 @@ model:
 # Output Configuration
 output:
   # Output directory
-  output_dir: "./results"
+  output_dir: "./results_v4_tune3000"
   
   # What to generate
   generate_html: true
